feat: added initial validation for commit message

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.13", features = ["derive"] }
 regex = "1.10.2"
+
+[dev-dependencies]
+rstest = "0.18.2"
